--- a/style.css
+++ b/style.css
@@ -80,13 +80,93 @@
   text-align: center;
 }
 
-.mobile-content .text-wrapper-37-m {
-  font-size: 1.2em;
+.mobile-content .text-wrapper-36-m {
+  font-size: 1.4em;
   line-height: 1.3;
   white-space: normal;
-
+  font-family: "Inter", Helvetica;
+  font-weight: 600;
 }
 
+.mobile-content .text-wrapper-37-m {
+  font-size: 1em;
+  line-height: 1.3;
+  white-space: normal;
+  font-family: "Inter", Helvetica;
+  font-weight: 600;
+}
+
+.mobile-content .faqs {
+  position: relative;
+  width: 100%;
+  height: 58px;
+  background-color: #ffffff;
+  border-radius: 11px;
+  border: 1px solid #e1e8f0;
+  cursor: pointer;
+}
+
+.faqs.show{
+  border-radius: 11px 11px 0 0;
+}
+
+
+.dropdown-contentm {
+  display: none;
+  width: 100%;
+  font-family: "Inter", Helvetica;
+  font-weight: 500;
+  color: #162c5d;
+  font-size: 13px;
+  letter-spacing: -0.08px;
+  line-height: 23px;
+  background-color: #ffffff;
+  border: 1px solid #e1e8f0;
+  border-top: none;
+  border-radius: 11px;
+  z-index: 1;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.dropdown-contentm.show {
+  display: block;
+}
+
+
+.mobile-content .group-6m {
+  position: relative;
+  height: 58px;
+  background-color: #ffffff;
+  border-radius: 11px;
+  border: 1px solid;
+  border-color: #e1e8f0;
+}
+
+.mobile-content .text-wrapper-41m {
+  position: absolute;
+  width: 12px;
+  font-family: "Inter", Helvetica;
+  font-weight: 500;
+  color: #748098;
+  font-size: 15px;
+  text-align: center;
+  letter-spacing: -0.09px;
+  line-height: 23px;
+  white-space: nowrap;
+}
+
+.mobile-content .text-wrapper-42m {
+  position: absolute;
+  width: 176px;
+  font-family: "Inter", Helvetica;
+  font-weight: 500;
+  color: #162c5d;
+  font-size: 13px;
+  letter-spacing: -0.08px;
+  line-height: 23px;
+  white-space: nowrap;
+}
 
 /*Contenido desktop*/
   .content {
@@ -96,7 +176,6 @@
     margin: 0 auto;
   }
 }
-
 
 .desktop-content {
   background-color: rgba(255, 255, 255, 1);
